--- a/templates/items_table.html
+++ b/templates/items_table.html
@@ -2,6 +2,7 @@
 
 {% block body %}
 <div class="span12">
+{% if items %}
     <table class="table table-hover">
         <thead>
             <tr>
@@ -28,9 +29,13 @@
                 </tr>
 
             {% endfor %}
-
         </tbody>
     </table>
+{% else %}
+    <div>
+        没有搜索到结果。
+    </div>
+{% endif %}
 </div>
 
 {% endblock %}
